<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/choose_bluetooth_device"
        android:textColor="@color/text_color_primary"
        android:textSize="@dimen/size_large_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/paired_devices"
        android:textSize="@dimen/size_normal_text" />

    <View style="@style/BaseLine" />

    <ListView
        android:id="@+id/lv_dialog_choose_bluetooth_device_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"/>

    <TextView
        android:id="@+id/tv_dialog_choose_bluetooth_device_paired_devices_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/tip_have_no_paired_device"
        android:textColor="@color/text_color_secondary"
        android:textSize="@dimen/size_small_text"
        android:visibility="gone" />

    <View style="@style/BaseLine" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dialog_choose_bluetooth_device_search_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="16dp"
            android:text="@string/search_device"
            android:textSize="@dimen/size_normal_text" />

        <ProgressBar
            android:id="@+id/pb_dialog_choose_bluetooth_device_progress_bar"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="16dp"
            android:visibility="gone" />

    </FrameLayout>

    <View style="@style/BaseLine" />

    <ListView
        android:id="@+id/lv_dialog_choose_bluetooth_device_found_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"/>

    <TextView
        android:id="@+id/tv_dialog_choose_bluetooth_device_found_devices_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/tip_have_no_found_bluetooth_device"
        android:textColor="@color/text_color_secondary"
        android:textSize="@dimen/size_small_text"
        android:visibility="gone" />


</LinearLayout>